force-app/main/default/objects/Channel_Forecast__c/Channel_Forecast__c.object-meta.xml
<CustomObject>
    <label>Channel Forecast</label>
    <nameField>
        <displayFormat>C-F-{MM}{000}{YY}</displayFormat>
        <label>Channel Forecast Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Channel Forecasts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>