force-app/main/default/objects/Channel_Forecast__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Channel Forecasts</relationshipLabel>
    <relationshipName>Channel_Forecasts</relationshipName>
    <type>Lookup</type>
</CustomField>