force-app/main/default/objects/Channel_Forecast__c/fields/Account_Development_Plan__c.field-meta.xml
<CustomField>
    <fullName>Account_Development_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Development Plan</label>
    <referenceTo>Account_Development_Plan__c</referenceTo>
    <relationshipLabel>Channel Forecasts</relationshipLabel>
    <relationshipName>Channel_Forecasts</relationshipName>
    <type>Lookup</type>
</CustomField>