force-app/main/default/objects/Channel_Forecast__c/fields/Expected__c.field-meta.xml
<CustomField>
    <fullName>Expected__c</fullName>
    <label>Expected</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>