force-app/main/default/objects/Channel_Forecast__c/fields/Upside__c.field-meta.xml
<CustomField>
    <fullName>Upside__c</fullName>
    <label>Upside</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>