force-app/main/default/objects/Channel_Forecast__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Month__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>